<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/animeList"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/anime" />
    <item
        android:id="@+id/mangaList"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/manga" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />
</menu>